--- a/jpa-hibernatepanche/src/main/resources/META-INF/resources/index.html
+++ b/jpa-hibernatepanche/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>datasources-jdbcapp - 1.0.0-SNAPSHOT</title>
+    <title>jpa-hibernatepancheapp - 1.0.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -144,7 +144,7 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>org.acme</code></li>
-                <li>ArtifactId: <code>datasources-jdbcapp</code></li>
+                <li>ArtifactId: <code>jpa-hibernatepancheapp</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.1.3.Final</code></li>
             </ul>
@@ -153,6 +153,12 @@
             <h3>Do you like Quarkus?</h3>
             <ul>
                 <li>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</li>
+            </ul>
+        </div>
+        <div class="right-section">
+            <h3>Selected extensions guides</h3>
+            <ul>
+                <li title="REST endpoint framework implementing JAX-RS and more"><a href="https://quarkus.io/guides/rest-json" target="_blank">RESTEasy JAX-RS guide</a></li>
             </ul>
         </div>
         <div class="right-section">
